feat(meta): notranslate google

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       name="description"
       content="Pusat Informasi Generus Bandung Selatan I"
     />
+    <meta name="google" content="notranslate">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
